quorum/test/tests/TypeChecker/Pass/ImpAssignTextObjTextObjWrapped.quorum
class main
    action main
        Text txt
        txt:SetValue("t")
        Text t = txt
        text x = txt:GetValue()
    end
end