quorum/test/tests/TypeChecker/Fail/ImpAssignIntObjTextWrapped.quorum
class main
    action main
        Integer i = "text"
    end
end